--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,5 +27,7 @@ jobs:
     - run: docker login https://ghcr.io -u token -p ${{ github.token }}
     - name: Push the image
       run: docker push ${{ env.IMAGE }}
+    - name: Remove the image
+      run: docker rm ${{ env.IMAGE }}
     - name: Pull the image
       run: docker pull ${{ env.IMAGE }}
