--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,6 +28,6 @@ jobs:
     - name: Push the image
       run: docker push ${{ env.IMAGE }}
     - name: Remove the image
-      run: docker rm ${{ env.IMAGE }}
+      run: docker image rm ${{ env.IMAGE }}
     - name: Pull the image
       run: docker pull ${{ env.IMAGE }}
