--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        size: [1, $((4*1024*1024)), $((5*1024*1024)), $((6*1024*1024))]
+        size: [1, 10]
       
     runs-on: self-hosted
 
